# headstash-patch

./: .gitignore  Cargo.toml  Makefile.toml  README.md  launchpad-json.md  makefile
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/helpers/: README.md
contracts/airdrop/helpers/src/: airdrop.ts
contracts/airdrop/helpers/src/commands/: generateProofs.ts  generateRoot.ts
contracts/airdrop/src/: contract.rs  decode.rs  handle.rs  lib.rs  query.rs  state.rs  test.rs  verify.rs
schema/airdrop/: execute_answer.json  execute_msg.json  instantiate_msg.json  query_answer.json  query_msg.json
tools/headstash/: account.js  deploy-cw20.sh  main.js  package.json  permit-sig-example.json  snip20.js
tools/merkleTree/: .eslintrc
tools/merkleTree/src/commands/: verifyProofs.ts
