[workspace]
resolver = "2"
members = [
  # Packages
  "packages/shade_protocol",
  "packages/multi_test",
  "packages/multi_derive",
  "packages/contract_derive",
  "packages/ethereum_verify",

  # Secret Headstash Contract
  "contracts/airdrop",

  # Tools
  # "tools/doc2book",
  # "launch"
]

exclude = ["packages/network_integration"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
